--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,36 @@
+@import url('https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer|News+Cycle');
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow:hidden;
+    font-family: "News Cycle";
+    box-sizing:border-box;
+    text-align: center;
+}
+
+#title {
+    font-family:'IM Fell Great Primer', serif; /*DON'T JUDGE ME i need a better font*/
+    font-size: 8vw;
+    margin: 30vw 0 3vw 0;
+}
+
+button {
+    border: none;
+    font-size: 2.5vw;
+    border-radius: 1vw;
+    padding:0.5vw;
+    font-family:inherit;
+    text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    #title {
+        font-size: 50px;
+        color: green !important;
+    }
+}
+
 #pc {
     margin:0;
     padding: 0;
@@ -6,13 +39,16 @@
     top:-10px;
     left:-10px;
     z-index: -1;
-    -webkit-animation: lighten 5s infinite;
-    animation: lighten 5s infinite;
+    filter: blur(10px) brightness(0.5);
 }
 
+#pc.start {
+    -webkit-animation: lighten 1.5s forwards;
+    animation: lighten 1.5s forwards;
+}
 @keyframes lighten {
     from {
-        filter: "blur(10px) brightness(0.5)";
+        filter: blur(10px) brightness(0.5);
     }
     to {
         filter: none;
@@ -21,7 +57,7 @@
 
 @-webkit-keyframes lighten {
     from {
-        filter: "blur(10px) brightness(0.5)";
+        filter: blur(10px) brightness(0.5);
     }
     to {
         filter: none;
