--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,7 @@
 <title>pixel canvas</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="/assets/style.css" rel="stylesheet"/>
+<meta name="viewport" content="initial-scale=1">
+<script>
+    const colours = [];
+</script>
