--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,18 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer|News+Cycle');
 
 html, body {
-    width: 100%;
-    height: 100%;
     overflow:hidden;
     font-family: "News Cycle";
     box-sizing:border-box;
     text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    width: 100%;
+    height: 100%;
 }
 
 #title {
     font-family:'IM Fell Great Primer', serif; /*DON'T JUDGE ME i need a better font*/
     font-size: 8vw;
-    margin: 30vw 0 3vw 0;
+    margin: 30vh 0 3vh 0;
 }
 
 button {
@@ -24,14 +29,25 @@ button {
     text-align: center;
 }
 
+button#start {
+    color: black;
+    background-color: white;
+}
+
+button#start:hover {
+    color: #444;
+    background-color: #ddd;
+}
+
 @media screen and (max-width: 768px) {
     #title {
         font-size: 50px;
-        color: green !important;
     }
 }
 
 #pc {
+    /*height: calc(20px + 100vh);
+    width: calc(20px + 100vw);*/
     margin:0;
     padding: 0;
     box-sizing: border-box;
@@ -46,6 +62,21 @@ button {
     -webkit-animation: lighten 1.5s forwards;
     animation: lighten 1.5s forwards;
 }
+
+.banner {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 50%;
+    margin-left: -100px;
+    padding-bottom: 5px;
+    width: 200px;
+    color: white;
+    border-radius: 0 0 10px 10px;
+    background-color: rgb(15, 159, 255);
+    vertical-align: bottom;
+}
+
 @keyframes lighten {
     from {
         filter: blur(10px) brightness(0.5);
