--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -20,6 +20,15 @@ html {
     margin: 30vh 0 3vh 0;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover, a:focus {
+    text-decoration: underline;
+}
+
 button {
     border: none;
     font-size: 2.5vw;
@@ -54,6 +63,7 @@ button#start:hover {
     position: fixed;
     top:-10px;
     left:-10px;
+    display: block;
     z-index: -1;
     filter: blur(10px) brightness(0.5);
 }
@@ -61,6 +71,7 @@ button#start:hover {
 #pc.start {
     -webkit-animation: lighten 1.5s forwards;
     animation: lighten 1.5s forwards;
+    z-index: 1;
 }
 
 .banner {
