--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,9 @@
 $(function(){
     $("#signin").hide().slideDown();
     const ctx = document.getElementById("pc").getContext("2d");
-    var w,h;
+    var w,h,md;
+    var offsetX=0, offsetY=0;
+    var drag={x:0,y:0,ging:false};
     var mx=0,my=0,x=0,y=0;
     const widths = [5,7,10,15,18,20,25,30,40,60,120,500];
     var wid = 5;
@@ -34,15 +36,15 @@ $(function(){
         up = (x+y)%2;
         ctx.beginPath();
         if (up) {
-            ctx.moveTo(w/2+tw*x,h/2-th*(y+1));
-            ctx.lineTo(w/2-tw+tw*x,h/2-th*y);
-            ctx.lineTo(w/2+tw+tw*x,h/2-th*y);
-            ctx.lineTo(w/2+tw*x,h/2-th*(y+1));
+            ctx.moveTo(w/2+tw*x-offsetX,h/2-th*(y+1)+offsetY);
+            ctx.lineTo(w/2-tw+tw*x-offsetX,h/2-th*y+offsetY);
+            ctx.lineTo(w/2+tw+tw*x-offsetX,h/2-th*y+offsetY);
+            ctx.lineTo(w/2+tw*x-offsetX,h/2-th*(y+1)+offsetY);
         } else {
-            ctx.moveTo(w/2+tw*x,h/2-th*y);
-            ctx.lineTo(w/2-tw+tw*x,h/2-th*(y+1));
-            ctx.lineTo(w/2+tw+tw*x,h/2-th*(y+1));
-            ctx.lineTo(w/2+tw*x,h/2-th*y);
+            ctx.moveTo(w/2+tw*x-offsetX,h/2-th*y+offsetY);
+            ctx.lineTo(w/2-tw+tw*x-offsetX,h/2-th*(y+1)+offsetY);
+            ctx.lineTo(w/2+tw+tw*x-offsetX,h/2-th*(y+1)+offsetY);
+            ctx.lineTo(w/2+tw*x-offsetX,h/2-th*y+offsetY);
         }
         if (colour) {
             ctx.fillStyle=colour;
@@ -54,8 +56,8 @@ $(function(){
     }
 
     function grid(w,h) {
-        for (i=Math.floor(-w/tw);i<=Math.floor(w/tw);i++){
-            for (j=-Math.floor(h/th);j<=Math.floor(h/th);j++){
+        for (i=Math.floor((-w+offsetX)/tw);i<=Math.floor((w+offsetX)/tw);i++){
+            for (j=-Math.floor((h-offsetY)/th);j<=Math.floor((h-offsetY)/th);j++){
                 triangle(i,j);
             }
         }
@@ -66,7 +68,6 @@ $(function(){
         for (i=0;i<triangles.length;i++){
             triangle(triangles[i][0],triangles[i][1],triangles[i][2]);
         }
-        console.log("The red triangle is (0,0).");
     }
 
     $(window).resize(function(){
@@ -91,13 +92,11 @@ $(function(){
     $(window).bind('keydown',function(){
         if (event.ctrlKey || event.metaKey) {
             if (event.which===187){
-                console.log("larger");
                 event.preventDefault();
                 if (wid+1>=widths.length) return;
                 wid+=1;
                 $(window).resize();
             } else if (event.which===189){
-                console.log("smaller");
                 event.preventDefault();
                 if (wid<=0) return;
                 wid-=1;
@@ -114,24 +113,54 @@ $(function(){
         $("#signin").slideUp(200);
     }, 7000);
 
-    $("#pc").click(function(e){
-        let ox=e.clientX+10-w/2, oy=-(e.clientY+10-h/2);
+    function detect(clientX, clientY, togglable=true){
+        let ox=clientX+10-w/2+offsetX, oy=-(clientY+10-h/2)+offsetY;
         let clickX=Math.floor(ox/tw), clickY=Math.floor(oy/th);
-        console.log("y:"+clickY);
-        console.log(clickX);
         let modx = ((ox%tw)+tw)%tw, mody = ((oy%th)+th)%th;
-        console.log(modx,mody);
         if ((clickX+clickY)%2){
-            console.log("slope down");
             clickX+=(mody>(tw-modx)*Math.sqrt(3));
         } else {
-            console.log("slope up");
             clickX+=(mody<modx*Math.sqrt(3));
         }
-        triangles.push([clickX,clickY, "hsl("+Math.floor(Math.random()*360)+",70%,70%)"]);
-        $(window).resize();
-    });
+        let newf = t=>t[0]!==clickX||t[1]!==clickY;
+        let newTriangles = triangles.filter(newf);
+        if (triangles.filter(t=>!newf(t)).length&&togglable){
+            triangles=newTriangles;
+            $(window).resize();
+        } else {
+            triangles=newTriangles;
+            triangles.push([clickX, clickY, "hsl("+(((10*(clickX+clickY))%360)+360)%360+",70%,70%)"]);
+            triangle(clickX,clickY,"hsl("+(((10*(clickX+clickY))%360)+360)%360+",70%,70%)");
+        }
+    }
 
+    $("#pc").mousedown(function(e){
+        md=true;
+        drag.ging = false;
+        drag.x=e.clientX;drag.y=e.clientY;
+    });
+    $("#pc").mousemove(function(e){
+        if (md) {
+            let cx=e.clientX-drag.x;
+            let cy=e.clientY-drag.y;
+            console.log(cx,cy);
+            drag.x=e.clientX;drag.y=e.clientY;
+            if (drag.ging||(cx^2+cy^2)>0.1){
+                drag.ging=true;
+                offsetX-=cx;
+                offsetY+=cy;
+                $(window).resize();
+            } else {
+                console.log("yay.");
+            }
+        }
+    });
+    $("#pc").mouseup(function(e){
+        md=false;
+        if(!drag.ging){
+            detect(e.clientX,e.clientY);
+        }
+    })
     $(document).on('gesturestart', function (e) {
         e.preventDefault();
     });
